--- a/index.html
+++ b/index.html
@@ -8,5 +8,18 @@
 
 
 
+
+<!-- 3rd-party scripts -->
+<script src="js/jquery-2.0.3.min.js" type="text/javascript"></script>
+<script src="js/underscore.js" type="text/javascript"></script>
+<script src="js/backbone.js" type="text/javascript"></script>
+
+<!-- Models -->
+<!-- <script src="src/models/dummy.js" type="text/javascript"></script> -->
+<!-- Views -->
+<!-- <script src="src/views/dummy-view.js" type="text/javascript"></script> -->
+<!-- Main Entry -->
+<!-- <script src="src/main.js" type="text/javascript"></script> -->
+
 </body>
 </html>
