--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
 
 
 <!-- 3rd-party scripts -->
-<script src="js/jquery-2.0.3.min.js" type="text/javascript"></script>
-<script src="js/underscore.js" type="text/javascript"></script>
-<script src="js/backbone.js" type="text/javascript"></script>
+<script src="vendor/jquery-2.0.3.min.js" type="text/javascript"></script>
+<script src="vendor/underscore.js" type="text/javascript"></script>
+<script src="vendor/backbone.js" type="text/javascript"></script>
 
 <!-- Models -->
 <!-- <script src="src/models/dummy.js" type="text/javascript"></script> -->
