--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <script src="vendor/backbone.js" type="text/javascript"></script>
 
 <!-- Models -->
-<!-- <script src="src/models/dummy.js" type="text/javascript"></script> -->
+<script src="src/models/wine.js" type="text/javascript"></script>
 <!-- Views -->
 <!-- <script src="src/views/dummy-view.js" type="text/javascript"></script> -->
 <!-- Main Entry -->
