--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
 <!-- Models -->
 <script src="src/models/wine.js" type="text/javascript"></script>
 <!-- Views -->
-<!-- <script src="src/views/dummy-view.js" type="text/javascript"></script> -->
+<script src="src/views/wine.js" type="text/javascript"></script>
 <!-- Main Entry -->
-<!-- <script src="src/main.js" type="text/javascript"></script> -->
+<script src="src/main.js" type="text/javascript"></script>
 
 </body>
 </html>
