refactored template out of view

--- a/index.html
+++ b/index.html
@@ -8,6 +8,11 @@
 
 
 
+<!-- Underscore templates -->
+<script id="wineTemplate" type="text/template">
+	<strong><%= name %></strong> (<%= year %>) <%= region %>, <%= country %>
+
+</script>
 
 <!-- 3rd-party scripts -->
 <script src="vendor/jquery-2.0.3.min.js" type="text/javascript"></script>
