--- a/index.html
+++ b/index.html
@@ -21,6 +21,8 @@
 
 <!-- Models -->
 <script src="src/models/wine.js" type="text/javascript"></script>
+<!-- Collections -->
+<script src="src/collections/wines.js" type="text/javascript"></script>
 <!-- Views -->
 <script src="src/views/wine.js" type="text/javascript"></script>
 <!-- Main Entry -->
