wine collection renders to the page

--- a/index.html
+++ b/index.html
@@ -9,6 +9,11 @@
 
 
 <!-- Underscore templates -->
+<script id="wineList" type="text/template">
+	// <strong><%= name %></strong> (<%= year %>) <%= region %>, <%= country %>
+
+</script>
+
 <script id="wineTemplate" type="text/template">
 	<strong><%= name %></strong> (<%= year %>) <%= region %>, <%= country %>
 
